add: initial Three.js Set up

--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
   <title>Document</title>
 
   <!-- Import Three JS -->
-  <script type="importmap">
-    {
-      "imports": {
-        "three": "https://cdn.jsdelivr.net/npm/three@0.168.0/build/three.module.js",
-        "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.168.0/examples/jsm/"
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://cdn.jsdelivr.net/npm/three@0.161/build/three.module.js",
+          "jsm/": "https://cdn.jsdelivr.net/npm/three@0.161/examples/jsm/"
+        }
       }
-    }
-  </script>
+    </script>
   <script src="assets/script.js" type="module"></script>
 </head>
 <body>
-  <div id="scene-container"></div>
 </body>
 </html>
