--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
   <title>Theremin</title>
+  <meta name="title" content="A web based recreation of the beloved Theremin">
 
   <link rel="stylesheet" href="assets/style.css">
 
