fix: initial integration of theremin js

--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
       }
     </script>
   <script src="assets/script.js" type="module"></script>
+  <script src="assets/theremin.js"></script>
 </head>
 <body>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12">
+        <h1>Theremin</h1>
+        <p>Click and drag to play the theremin</p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
