--- a/index.html
+++ b/index.html
@@ -22,13 +22,27 @@
   <script src="assets/theremin.js"></script>
 </head>
 <body>
-  <div class="container-fluid">
+  <section class="container-fluid">
     <div class="row">
       <div class="col-12">
         <h1>Theremin</h1>
         <p>Click and drag to play the theremin</p>
       </div>
     </div>
-  </div>
+  </section>
+  <section class="notes-divider">
+    <div><p>C</p></div>
+    <div><p>C#</p></div>
+    <div><p>D</p></div>
+    <div><p>D#</p></div>
+    <div><p>E</p></div>
+    <div><p>F</p></div>
+    <div><p>F#</p></div>
+    <div><p>G</p></div>
+    <div><p>G#</p></div>
+    <div><p>A</p></div>
+    <div><p>A#</p></div>
+    <div><p>B</p></div>
+  </section>
 </body>
 </html>
