--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <meta name="title" content="A web based recreation of the beloved Theremin">
 
   <link rel="stylesheet" href="assets/style.css">
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="assets/hover/hover.js"></script>
   <!-- Import Three JS -->
     <script type="importmap">
       {
@@ -20,6 +21,9 @@
     </script>
   <script src="assets/script.js" type="module"></script>
   <script src="assets/theremin.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="assets/hover/hover.js"></script>
+  
 </head>
 <body>
   <section class="container-fluid">
@@ -30,7 +34,7 @@
       </div>
     </div>
   </section>
-  <section class="notes-divider">
+  <div class="notes-divider wrapper">
     <div><p>C</p></div>
     <div><p>C#</p></div>
     <div><p>D</p></div>
@@ -43,6 +47,9 @@
     <div><p>A</p></div>
     <div><p>A#</p></div>
     <div><p>B</p></div>
-  </section>
+  </div>
 </body>
+<script>
+  
+</script>
 </html>
